--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#2c3e50",
-  "description": "シンプルなオセロゲームのPWA版",
+  "description": "シンプルなオセロゲームのPWA版です。",
   "icons": [
     {
       "src": "icon-192.png",
@@ -17,5 +17,7 @@
       "sizes": "512x512",
       "type": "image/png"
     }
-  ]
+  ],
+  "lang": "ja",
+  "orientation": "portrait"
 }
